--- a/view/Detail.view.xml
+++ b/view/Detail.view.xml
@@ -1,8 +1,11 @@
 <mvc:View
-    xmlns="sap.m"
-    xmlns:mvc="sap.ui.core.mvc">
-    <Page   title="{i18n>detailPageTitle}">
-        <ObjectHeader title="Invoice"></ObjectHeader>
-    </Page>
-
+	controllerName="sample-app.controller.Detail"
+	xmlns="sap.m"
+	xmlns:mvc="sap.ui.core.mvc">
+	<Page
+		title="{i18n>detailPageTitle}">
+		<ObjectHeader
+			intro="{invoice>ShipperName}"
+			title="{invoice>ProductName}"/>
+	</Page>
 </mvc:View>
