--- a/view/InvoiceList.view.xml
+++ b/view/InvoiceList.view.xml
@@ -1,39 +1,45 @@
 <mvc:View
-	controllerName="sample-app.controller.InvoiceList"
-	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
-	<List
-		id="invoiceList"
-		headerText="{i18n>invoiceListTitle}"
-		class="sapUiResponsiveMargin"
-		width="auto"
-		items="{
+    controllerName="sample-app.controller.InvoiceList"
+    xmlns="sap.m"
+    xmlns:mvc="sap.ui.core.mvc"
+>
+    <List
+        id="invoiceList"
+        headerText="{i18n>invoiceListTitle}"
+        class="sapUiResponsiveMargin"
+        width="auto"
+        items="{
 					path: 'invoice>/Invoices' ,
 					sorter : { path: 'ShipperName',
 							   group : true } 
-				}">
-		<headerToolbar>
-         <Toolbar>
-            <Title text="{i18n>invoiceListTitle}"/>
-            <ToolbarSpacer/>
-            <SearchField width="50%" search="onFilterInvoices" selectOnFocus="false"/>
-         </Toolbar>
-      </headerToolbar>
-		<items>
-			<ObjectListItem
-				title="{invoice>Quantity} x {invoice>ProductName}"
-				number="{
-					parts: [{path: 'invoice>ExTendedPrice'}, {path: 'view>/currency'}],
+				}"
+    >
+        <headerToolbar>
+            <Toolbar>
+                <Title text="{i18n>invoiceListTitle}" />
+                <ToolbarSpacer />
+                <SearchField
+                    width="50%"
+                    search="onFilterInvoices"
+                    selectOnFocus="false"
+                />
+            </Toolbar>
+        </headerToolbar>
+        <items>
+            <ObjectListItem
+					
+					title="{invoice>Quantity} x {invoice>ProductName}"
+					number="{
+					parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
 					type: 'sap.ui.model.type.Currency',
 					formatOptions: {
 						showMeasure: false
 					}
 				}"
-				numberUnit="{view>/currency}"
-				numberState="{=	${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }"
-				type="Navigation"
-				press="onPress">
-				
+					numberUnit="{view>/currency}"
+					numberState="{=	${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }"
+					type="Navigation"
+					press="onPress">
 				<firstStatus>
 					<ObjectStatus text="{
 						path: 'invoice>Status',
@@ -41,7 +47,6 @@
 					}"/>
 				</firstStatus>
 			</ObjectListItem>
-
-		</items>
-	</List>
+        </items>
+    </List>
 </mvc:View>
