--- a/view/Detail.view.xml
+++ b/view/Detail.view.xml
@@ -3,9 +3,11 @@
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
 	<Page
-		title="{i18n>detailPageTitle}">
+		title="{i18n>detailPageTitle}"
+		showNavButton="true"
+		navButtonPress="onNavBack">
 		<ObjectHeader
 			intro="{invoice>ShipperName}"
-			title="{invoice>ProductName}"/>
+			title="{invoice>Quantity} x {invoice>ProductName}"/>
 	</Page>
 </mvc:View>
