--- a/view/Detail.view.xml
+++ b/view/Detail.view.xml
@@ -1,7 +1,8 @@
 <mvc:View
 	controllerName="sample-app.controller.Detail"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns:wt="sample-app.control">
 	<Page
 		title="{i18n>detailPageTitle}"
 		showNavButton="true"
@@ -9,5 +10,6 @@
 		<ObjectHeader
 			intro="{invoice>ShipperName}"
 			title="{invoice>Quantity} x {invoice>ProductName}"/>
+			<wt:ProductRating class="sapUiSmallMarginBeginEnd" change="onRatingChange"/>
 	</Page>
 </mvc:View>
